objects/GenEd_UserCourses__c.object
<CustomObject>
    <fields>
        <fullName>AccessLevel__c</fullName>
        <label>AccessLevel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CompliantTillDate__c</fullName>
        <label>CompliantTillDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CourseId__c</fullName>
        <label>CourseId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CourseName__c</fullName>
        <label>CourseName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CourseOriginalId__c</fullName>
        <label>CourseOriginalId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginKey__c</fullName>
        <label>LoginKey</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PercentageComplete__c</fullName>
        <label>PercentageComplete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpToDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpToDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UpdatedDate__c</fullName>
        <label>UpdatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UserCourses_Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>UserCourses Unique Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UserOriginalId__c</fullName>
        <label>UserOriginalId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>GenEd_UserCourses</label>
    <nameField>
        <label>GenEd_UserCourses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GenEd_UserCourses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>